bugs resueltos y falta poner color al scrollbar

--- a/src/components/trabajadores.css
+++ b/src/components/trabajadores.css
@@ -67,3 +67,9 @@ input:focus:invalid{
 
   
   }
+
+
+.table-container{
+max-height: 400px;
+overflow-y: scroll;
+  }
