--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+::-webkit-scrollbar
+{height: 5px;
+  width: 6px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+	border-radius: 10px;
+	background-color: #CCCCCC;
+}
